# davqt

./: .gitignore  CMakeLists.txt  database.cpp  database.h  handlers.cpp  handlers.h  images.qrc  main.cpp  main_window.cpp  main_window.h  main_window.ui  manager.cpp  manager.h  session.cpp  session.h  storage.cpp  storage.h  sync.cpp  sync.h  syncer.cpp  syncer.h  tools.h  types.h  updater.cpp  updater.h
database/: database.cpp  database.h  db.h  entry.h
database/fs/: fs.cpp  fs.h
handlers/: handlers.cpp  handlers.h
provisor/: STD_SHA_256.cpp  STD_SHA_256.h  main.cpp  provisor.cpp  provisor.h  provisor.pro  provisor.ui
settings/: main_settings.cpp  main_settings.h  main_settings.ui  merge_settings.cpp  merge_settings.h  merge_settings.ui  settings.h  sync_settings.cpp  sync_settings.h  sync_settings.ui
tests/: fs_test.cpp  storage_test.cpp  test.cpp
